test/fail/MissingDefinition.agda

module MissingDefintion where

T : Set -> Set

